feat: Complete student photo upload functionality
- Add photo upload endpoint /api/students/{id}/photo
- Add photo_path column to students table
- Implement photo upload UI with drag & drop
- Add circular avatar display in student table
- Fix URL generation for photo display
- Remove NIS display under student name
- Clean up debug logging
- Complete student CRUD with photo, QR code, and CSV import

--- a/etrack-frontend/package.json
+++ b/etrack-frontend/package.json
@@ -27,6 +27,7 @@
     "apexcharts": "4.3.0",
     "axios": "^1.12.2",
     "pinia": "2.3.0",
+    "qrcode": "^1.5.4",
     "vee-validate": "4.15.0",
     "vite-plugin-static-copy": "^3.1.1",
     "vite-plugin-vuetify": "2.0.4",
