--- a/etrack-frontend/package.json
+++ b/etrack-frontend/package.json
@@ -26,12 +26,14 @@
     "ant-design-vue": "4.2.6",
     "apexcharts": "4.3.0",
     "axios": "^1.12.2",
+    "chart.js": "^4.5.0",
     "pinia": "2.3.0",
     "qrcode": "^1.5.4",
     "vee-validate": "4.15.0",
     "vite-plugin-static-copy": "^3.1.1",
     "vite-plugin-vuetify": "2.0.4",
     "vue": "3.5.13",
+    "vue-chartjs": "^5.3.2",
     "vue-router": "4.5.0",
     "vue-tabler-icons": "2.21.0",
     "vue3-apexcharts": "1.8.0",
