feat: Implement comprehensive E-Track v2 system
- Add Face Recognition Attendance system
- Implement MFA (Multi-Factor Authentication) with Email OTP
- Add comprehensive user management with roles
- Create student and employee management modules
- Implement dashboard with analytics and charts
- Add audit trail and logging system
- Create backup and export functionality
- Add comprehensive documentation and troubleshooting guides
- Fix backend authentication issues with Sanctum middleware
- Update API configuration for proper frontend-backend communication

Features:
- Face recognition attendance processing
- MFA with email OTP (hidden from UI)
- Role-based access control
- Student/Employee CRUD operations
- Dashboard with statistics and charts
- Audit logging system
- Data export functionality
- Comprehensive error handling
- Mobile-responsive UI
- Security enhancements

Technical:
- Laravel 11 backend with Sanctum authentication
- Vue.js 3 frontend with Vuetify UI
- MySQL database with proper relationships
- API-first architecture
- Comprehensive testing and debugging tools
- Production-ready configuration

--- a/etrack-frontend/package.json
+++ b/etrack-frontend/package.json
@@ -22,11 +22,13 @@
     "@fontsource/roboto": "5.1.0",
     "@mdi/js": "^7.4.47",
     "@tsconfig/node20": "20.1.4",
+    "@types/qrcode": "^1.5.5",
     "@typescript-eslint/parser": "^8.18.2",
     "ant-design-vue": "4.2.6",
     "apexcharts": "4.3.0",
     "axios": "^1.12.2",
     "chart.js": "^4.5.0",
+    "leaflet": "^1.9.4",
     "pinia": "2.3.0",
     "qrcode": "^1.5.4",
     "vee-validate": "4.15.0",
